pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constAssign.pkl
amends "../../basic/constModifier.pkl"

constantSimpleValue = "1"
